# Civilization_VI_Play_By_Cloud_Webhook_with_FastAPI

./: .gitignore  .pre-commit-config.yaml  README.md  convert_game_json_mongo_db.py  convert_json_mongo_db.py  convert_player_json_mongo_db.py  convert_time_stamp.py  move_next_batch_to_mongo_db.py  player_names.conf  pyproject.toml  requirements.txt  start_matrix_bot.sh  start_server.sh
civ_vi_webhook/: __init__.py  dependencies.py  main.py
civ_vi_webhook/api/: action_endpoints.py  info_endpoints.py  turn_endpoints.py
civ_vi_webhook/models/: action_models.py  games.py  information_models.py  turns.py
civ_vi_webhook/models/api/: action_models.py  games.py  information_models.py  turns.py
civ_vi_webhook/models/db/: games.py  matrix.py  mongo_setup.py  user.py
civ_vi_webhook/services/db/: game_service.py  matrix_service.py  user_service.py
civ_vi_webhook/services/matrix/: README.md  matrix_bot_listener.py  matrix_bot_sender.py  sample_matrix.conf
civ_vi_webhook/site/: game.py  homepage.py
civ_vi_webhook/templates/: game_details.html  index.html  layout.html
civ_vi_webhook/templates/partials/: both_tables.html  completed_games_table.html  current_games_table.html
tests/: test_main.py
